Further improvments
